@@ -1,4 +1,7 @@
 
+2010-08-25  Paulo Pizarro <paulo.pizarro@gmail.com>
+	* implemented method 'set_hparams' to NuaHandle class.
+
 2010-08-19  Paulo Pizarro <paulo.pizarro@gmail.com>
 	* added media states constants on the module 'soa'.
 	* fixed attribute_find function on the module 'sdp' to return nil if not found.
